# cython-extensions-sc2

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: compile_cython.yml  orchestrator.yml  pages.yml  release.yml  test.yml  wheels.yml
cython_extensions/: __init__.py  ability_mapping.h  ability_mapping.pxd  ability_mapping.pyx  ability_mapping_notebook.pyx  ability_order_tracker.pyx  bootstrap.pyx  combat_utils.pyi  combat_utils.pyx  cython_functions.pyx  dijkstra.pyi  dijkstra.pyx  dijkstra_priority_queue.hpp  flood_fill.pyx  general_utils.pyi  general_utils.pyx  geometry.pyi  geometry.pyx  map_analysis.pyi  map_analysis.pyx  numpy_helper.pyi  numpy_helper.pyx  placement_solver.pyi  placement_solver.pyx  turn_rate.pyx  unit_data.pyx  units_utils.pyi  units_utils.pyx
cython_extensions/type_checking/: __init__.py  config.py  validators.py  wrappers.py
docs/: index.md
notebooks/: building_formation.ipynb  dijkstra.ipynb  more_python_to_cython.ipynb  python_to_cython.ipynb  structure_pending.ipynb  structure_pending_error.ipynb  template_notebook.ipynb
scripts/: ability_mapping.pyx.bak  update_ability_mapping.py
search/: search_index.json
stylesheets/: extra.css
tests/: bot_test.py  conftest.py  generate_pickle_files_bot.py  load_bot_from_pickle.py  test_combat_utils.py  test_dijkstra.py  test_general_utils.py  test_geometry.py  test_map_analysis.py  test_numpy_helper.py  test_placement_solver.py  test_units_utils.py  test_wrapper_signature_binding.py
tests/combat_data/: AncientCisternAIE.xz  EquilibriumAIE.xz  GoldenauraAIE.xz  GresvanAIE.xz  HardLeadAIE.xz  OceanbornAIE.xz  SiteDeltaAIE.xz
tests/pickle_data/: AncientCisternAIE.xz  EquilibriumAIE.xz  GoldenauraAIE.xz  GresvanAIE.xz  HardLeadAIE.xz  OceanbornAIE.xz  SiteDeltaAIE.xz
